Fixed dark mode and finished new filter modal

--- a/src/components/FilterModal.module.css
+++ b/src/components/FilterModal.module.css
@@ -10,6 +10,11 @@
   background: transparent;
   z-index: 12;
 }
+.popupTitle {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 1rem;
+}
 .filterTitle {
   font-size: 1rem;
   font-weight: bold;
@@ -33,7 +38,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  padding: 2rem 1rem;
+  padding: 1rem ;
 }
 .filterList {
   display: grid;
@@ -94,7 +99,7 @@
   background-color: var(--primary-color);
   color: var(--main-bg);
   border: none;
-  margin: 1rem 0;
+  margin: 1rem;
   flex: 1;
   padding: 0.5rem 1rem;
   font-size: 1rem;
@@ -107,7 +112,7 @@
   background-color: transparent;
   color: var(--main-text);
   border: 2px solid var(--primary-color);
-  margin: 1rem 0;
+  margin: 1rem;
   padding: 0.5rem 1rem;
   font-size: 1rem;
   cursor: pointer;
@@ -121,7 +126,6 @@
   height: 1px;
   width: 100%;
   background-color: var(--seperator-color);
-  margin-bottom: 1rem;
 }
 
 @media (min-width: 768px) {
